修正 #150 编辑完答案后，之前的答案没有恢复显示。并将所有事件处理器都提取到一个单独的方法中。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ActivityNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ActivityNode.html
@@ -8,13 +8,12 @@
 			<div>
 				<a href="#" data-dojo-attach-point="userInfo"></a>
 				<span data-dojo-attach-point="action"></span>
-				<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time">三分钟前</time></span>
+				<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time"></time></span>
 			</div>
 			<div>
 				<div>
-					<div class="exercise" data-dojo-attach-point="exerciseNode">
-						
-					</div>
+					<div class="exercise" data-dojo-attach-point="exerciseNode"></div>
+					<div class="answer" data-dojo-attach-point="answerNode"></div>
 					<div style="float: right">
 					<!-- 
 						<a href="#">关注(100)</a>
