修正 #154 每道题的解答次数显示错误

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ActivityNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ActivityNode.html
@@ -26,7 +26,7 @@
 							<!-- 解答 -->
 							<button data-dojo-attach-point="btnAnswer"
 							 class="minibutton"><i class="icon-comment-alt"></i> 解答</button>
-							<a href="#" class="drip_answer_count">0</a>
+							<a href="#" data-dojo-attach-point="drip_answer_count" class="drip_answer_count">0</a>
 						</span>
 					</div>
 				</div>
