添加windows操作系统上build js的脚本，并执行build操作

--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/templates/ActivityNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/templates/ActivityNode.html
@@ -8,13 +8,12 @@
 			<div>
 				<a href="#" data-dojo-attach-point="userInfo"></a>
 				<span data-dojo-attach-point="action"></span>
-				<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time">三分钟前</time></span>
+				<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time"></time></span>
 			</div>
 			<div>
 				<div>
-					<div class="exercise" data-dojo-attach-point="exerciseNode">
-						
-					</div>
+					<div class="exercise" data-dojo-attach-point="exerciseNode"></div>
+					<div class="answer" data-dojo-attach-point="answerNode"></div>
 					<div style="float: right">
 					<!-- 
 						<a href="#">关注(100)</a>
@@ -27,7 +26,7 @@
 							<!-- 解答 -->
 							<button data-dojo-attach-point="btnAnswer"
 							 class="minibutton"><i class="icon-comment-alt"></i> 解答</button>
-							<a href="#" class="drip_answer_count">0</a>
+							<a href="#" data-dojo-attach-point="drip_answer_count" class="drip_answer_count">0</a>
 						</span>
 					</div>
 				</div>
