添加设置帐号页面

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/HeaderLoggedIn.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/HeaderLoggedIn.html
@@ -20,7 +20,7 @@
 			</a>
 		</li>
 		<li>
-			<a href="#" data-dojo-attach-point="account_setting">
+			<a href="/settings/profile" data-dojo-attach-point="account_setting">
 				<i class="icon-cog"> 设置帐号</i>
 			</a>
 		</li>
