--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/profile.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/profile.css
@@ -96,3 +96,48 @@
 .drip_join_label{
 	color: #808080;
 }
+
+
+
+.boxed-group {
+	position: relative;
+	background: #efefef;
+	padding: 3px;
+	border-radius: 3px;
+	margin: 0 0 15px 0;
+}
+
+.boxed-group>h3, .boxed-group .heading {
+	background-color: #e0e0e0;
+	background-image: -moz-linear-gradient(#fafafa, #e0e0e0);
+	background-image: -webkit-linear-gradient(#fafafa, #e0e0e0);
+	background-image: linear-gradient(#fafafa, #e0e0e0);
+	background-repeat: repeat-x;
+	margin: 0;
+	border-top-left-radius: 1px;
+	border-top-right-radius: 1px;
+	border: 1px solid #d8d8d8;
+	border-bottom: none;
+	padding: 10px 10px 11px 10px;
+	font-size: 14px;
+	text-shadow: 0 1px 0 #fff;
+}
+
+.boxed-group .boxed-group-inner {
+padding: 1px 10px;
+background: #fff;
+border: 1px solid #d8d8d8;
+border-top: 1px solid #ccc;
+border-bottom-left-radius: 1px;
+border-bottom-right-radius: 1px;
+color: #666;
+font-size: 13px;
+}
+
+.boxed-group-inner>div{
+	
+	margin-top: 15px;
+	margin-bottom:15px;
+	
+	
+}
