--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/widget/templates/HeaderLoggedIn.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/widget/templates/HeaderLoggedIn.html
@@ -19,6 +19,11 @@
 				<span data-dojo-attach-point="userName"></span>
 			</a>
 		</li>
-		<li><button class="minibutton" style="margin: 8px 5px 8px;" data-dojo-attach-point="logout"><i class="icon-signout"></i> 退出</button></li>
+		<li>
+			<a href="/settings/profile" data-dojo-attach-point="account_setting">
+				<i class="icon-cog"> 设置帐号</i>
+			</a>
+		</li>
+		<li><button class="minibutton" data-dojo-attach-point="logout"><i class="icon-signout"></i> 退出</button></li>
 	</ul>
 </div>
