--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
@@ -241,6 +241,15 @@ font-weight: bold;
 	
 }
 
+.answer{
+	background-color: #f5f5f5;
+	margin-bottom: 5px;
+	padding-top:3px;
+	padding-bottom:3px;
+	padding-left:3px;
+	border: dotted 1px black;
+}
+
 .box {
 	margin-bottom: 20px;
 }
