--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/templates/ActivityNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/templates/ActivityNode.html
@@ -5,7 +5,7 @@
 			<a href="#" data-dojo-attach-point="userLinkNode"><img data-dojo-attach-point="userImageNode" src="" width="50px" height="50px"/></a>
 		</div>
 		<div class="drip_detail">
-			<div>
+			<div class="drip_action">
 				<a href="#" data-dojo-attach-point="userInfo"></a>
 				<span data-dojo-attach-point="action"></span>
 				<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time"></time></span>
@@ -13,7 +13,7 @@
 			<div>
 				<div>
 					<div class="exercise" data-dojo-attach-point="exerciseNode"></div>
-					<div class="answer" data-dojo-attach-point="answerNode"></div>
+					<div class="answerContainer" data-dojo-attach-point="answerNode"></div>
 					<div style="float: right">
 					<!-- 
 						<a href="#">关注(100)</a>
