--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ExerciseNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ExerciseNode.html
@@ -1,11 +1,11 @@
 <div style="margin-bottom: 20px;">
 	<!-- TODO：将这些style提取到样式文件中 -->
 	<div
-		style="border-bottom: 1px solid #cacaca;padding-bottom:10px; background: #fbfbfb;">
+		style="border-bottom: 1px dashed #cacaca;padding-bottom:10px;">
 		<div style="padding-top: 5px; padding-bottom: 10px" data-dojo-attach-point="divContent"></div>
 		<div style="margin-top: 5px">
 			<div style="text-align: right">
-				<!-- <input type="button" data-dojo-attach-point="buttonAnswer"></input> -->
+				<a data-dojo-attach-point="buttonAnswer" href="#"><i class="icon-external-link"></i> 答题</a>
 			</div>
 		</div>
 	</div>
