--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ExerciseNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ExerciseNode.html
@@ -5,7 +5,7 @@
 		<div style="padding-top: 5px; padding-bottom: 10px" data-dojo-attach-point="divContent"></div>
 		<div style="margin-top: 5px">
 			<div style="text-align: right">
-				<a data-dojo-attach-point="buttonAnswer" href="#"><i class="icon-external-link"></i> 答题</a>
+				<a data-dojo-attach-point="linkAnswer" href="#"><i class="icon-external-link"></i> 答题</a>
 			</div>
 		</div>
 	</div>
