--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/templates/ActivityNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/templates/ActivityNode.html
@@ -2,7 +2,7 @@
 	<div>
 		<div class="drip_face">
 			<!-- TODO：放置用户头像 -->
-			<a href="#" data-dojo-attach-point="userLinkNode"><img data-dojo-attach-point="userImageNode" src="" width="50px" height="50px"/></a>
+			<a href="#" data-dojo-attach-point="userLinkNode"><img style="border-radius:3px" data-dojo-attach-point="userImageNode" src="" width="50px" height="50px"/></a>
 		</div>
 		<div class="drip_detail">
 			<div class="drip_action">
