修正bug #96 进入不同的页面时，如进入“习题库”页面，则Header中的“习题”应高亮显示。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/HeaderLoggedIn.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/HeaderLoggedIn.html
@@ -7,9 +7,9 @@
 	
 	<div class="divider-vertical"></div>
 	<ul class="drip_top_nav">
-		<li><a href="/" class="current">首页</a></li>
+		<li><a href="/" data-dojo-attach-point="menu_home">首页</a></li>
 		<!-- <li><a href="/explore_projects">笔记</a></li> -->
-		<li><a href="/explore_exercises">题库</a></li>
+		<li><a href="/explore_exercises" data-dojo-attach-point="menu_exercise">题库</a></li>
 		<!-- <li><a href="/help">帮助</a></li> -->
 	</ul>
 	<ul class="drip_user_links">
