--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/HeaderLoggedOut.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/HeaderLoggedOut.html
@@ -4,9 +4,14 @@
 	</a>
 	<span class="drip_version">测试版</span>
 	<ul class="drip_top_nav">
-		<li><a href="/exercises">题库</a></li>
-		<li><a href="/help">帮助</a></li>
-		<!-- <li><a href="/docs">文档</a></li> -->
+		<li><a href="/explore_exercises" data-dojo-attach-point="menu_exercise">题库</a></li>
+		<!--<li><a href="/help">帮助</a></li>
+		 <li><a href="/docs">文档</a></li> -->
 		<!-- <li><a href="#">开发博客</a></li> -->
+	</ul>
+	<ul class="drip_header_actions">
+		<li><a class="button primary" href="/join">注册</a></li>
+		<!-- return 登录完成后跳转到之前访问的页面 -->
+		<li><a class="button" data-dojo-attach-point="login" href="/login">登录</a></li>
 	</ul>
 </div>
