--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -139,6 +139,18 @@ img{
 	padding-top: 8px;
 }
 
+.drip_header_actions{
+	float: right;
+	padding: 0;
+	list-style: none;
+}
+
+.drip_header_actions>li {
+	position: relative;
+	float: left;
+	margin-right: 15px;
+}
+
 
 .drip_top_nav{
 	float: left;
