将个人首页的样式单独提取到css文件中，并添加尖角样式

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ActivityNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ActivityNode.html
@@ -1,14 +1,13 @@
-<div class="item">
-	<div>
-		<div class="drip_face">
-			<!-- TODO：放置用户头像 -->
-			<a href="#" data-dojo-attach-point="userLinkNode"><img style="border-radius:3px" data-dojo-attach-point="userImageNode" src="" width="50px" height="50px"/></a>
-		</div>
-		<div class="drip_detail">
-			<div class="drip_action">
-				<a href="#" data-dojo-attach-point="userInfo"></a>
-				<span data-dojo-attach-point="action"></span>
-				<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time"></time></span>
+<div class="activity_wrapper">
+	<a href="#" data-dojo-attach-point="userLinkNode"><img class="activity_avatar" data-dojo-attach-point="userImageNode" src="" width="50px" height="50px"/></a>
+	<div class="activity">
+		<div>
+			<div class="activity_header">
+				<div class="activity_header_text">
+					<a href="#" data-dojo-attach-point="userInfo"></a>
+					<span data-dojo-attach-point="action"></span>
+					<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time"></time></span>
+				</div>
 			</div>
 			<div>
 				<div>
