--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
@@ -195,35 +195,13 @@ font-weight: bold;
 }
 
 
-.activities{
-	/*width: 560px;*/
-}
 
-.activities .item:first-child{
-	margin-top: -1em;
-	border-top: none;
-}
 
-.activities .item {
-	padding: 1em 0 1em 0px;
-	overflow: hidden;
-	position: relative;
-	border-top: 1px solid #DDD;
-}
 
-.activities .item .time {
-	font-size: 12px;
-	color: #BBB;
-}
 
-.activities .item a{
-	text-decoration: none;
-	color: #4183C4;
-}
 
-.activities .item a:hover{
-	text-decoration: underline;
-}
+
+
 
 
 .exercise{
@@ -327,4 +305,13 @@ display: table;
 	color: white;
 	padding: 3px 3px 3px 3px;
 	border-radius: 3px;
+}
+
+.tag_updated{
+	background-color: yellow;
+	color: white;
+	padding: 3px 3px 3px 3px;
+	border-radius: 3px;
+	
+	margin-left: 5px;
 }
