支持直接在活动列表中切换到编辑状态

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/app.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/app.css
@@ -8,3 +8,4 @@
 @import url('../../drip/resources/UploaderFileList.css');
 @import url('../../mathEditor/resources/editor.css');
 @import url('../../drip/resources/dashboard.css');
+@import url('../../drip/resources/exercise.css');
