--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -359,17 +359,62 @@ img{
 	box-shadow: none;
 }
 
-.button:disabled, .button:disabled:hover, .button.disabled, .button.disabled:hover, .minibutton:disabled, .minibutton:disabled:hover, .minibutton.disabled, .minibutton.disabled:hover {
-opacity: .5;
-color: #666;
-text-shadow: 0 1px 0 rgba(255,255,255,0.9);
-background-image: none;
-background-color: #e5e5e5;
-border-color: #c5c5c5;
-cursor: default;
-box-shadow: none;
+.button:disabled, 
+.button:disabled:hover, 
+.button.disabled, 
+.button.disabled:hover, 
+.minibutton:disabled, 
+.minibutton:disabled:hover, 
+.minibutton.disabled, 
+.minibutton.disabled:hover {
+	opacity: .5;
+	color: #666;
+	text-shadow: 0 1px 0 rgba(255,255,255,0.9);
+	background-image: none;
+	background-color: #e5e5e5;
+	border-color: #c5c5c5;
+	cursor: default;
+	box-shadow: none;
 }
 
+.button:focus, 
+.minibutton:focus {
+	outline: none;
+	text-decoration: none;
+	border-color: #51a7e8;
+	box-shadow: 0 0 5px rgba(81,167,232,0.5);
+}
+
+.button:active, 
+.button.selected, 
+.button.selected:hover, 
+.button.zeroclipboard-is-active, 
+.minibutton:active, 
+.minibutton.selected, 
+.minibutton.selected:hover, 
+.minibutton.zeroclipboard-is-active {
+	background-color: #dcdcdc;
+	background-image: none;
+	border-color: #b5b5b5;
+	box-shadow: inset 0 2px 4px rgba(0,0,0,0.15);
+}
+
+.button:hover, 
+.button:active, 
+.button.zeroclipboard-is-hover, 
+.button.zeroclipboard-is-active, 
+.minibutton:hover, 
+.minibutton:active, 
+.minibutton.zeroclipboard-is-hover, 
+.minibutton.zeroclipboard-is-active {
+	text-decoration: none;
+	background-color: #dddddd;
+	background-image: -moz-linear-gradient(#eee, #ddd);
+	background-image: -webkit-linear-gradient(#eee, #ddd);
+	background-image: linear-gradient(#eee, #ddd);
+	background-repeat: repeat-x;
+	border-color: #ccc;
+}
 
 .button.primary, .minibutton.primary {
 	color: #fff;
@@ -420,6 +465,32 @@ box-shadow: none;
 	border-color: #4a993e;
 }
 
+.button.danger, 
+.minibutton.danger {
+	color: #900;
+}
+
+.button.danger:active, 
+.button.danger.selected, 
+.minibutton.danger:active, 
+.minibutton.danger.selected {
+	color: #fff;
+	background-color: #b33630;
+	background-image: none;
+	border-color: #9f312c;
+}
+
+.button.danger:hover, 
+.minibutton.danger:hover {
+	color: #fff;
+	text-shadow: 0px -1px 0 rgba(0,0,0,0.3);
+	background-color: #b33630;
+	background-image: -moz-linear-gradient(#dc5f59, #b33630);
+	background-image: -webkit-linear-gradient(#dc5f59, #b33630);
+	background-image: linear-gradient(#dc5f59, #b33630);
+	background-repeat: repeat-x;
+	border-color: #cd504a;
+}
 
 /* 个人首页样式 */
 .drip_body{
@@ -473,10 +544,6 @@ box-shadow: none;
 	height:80px;
 	width:80px;
 }
-
-
-
-
 
 
 
