--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
@@ -204,29 +204,7 @@ font-weight: bold;
 
 
 
-.exercise{
-	/*border: solid 1px #AEAEAE;*/
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
 
-.exercise .content{
-	
-	margin-bottom: 5px;
-}
-
-.exercise .option{
-	
-}
-
-.answer{
-	background-color: #f5f5f5;
-	margin-bottom: 5px;
-	padding-top:3px;
-	padding-bottom:3px;
-	padding-left:3px;
-	border: dotted 1px black;
-}
 
 .box {
 	margin-bottom: 20px;
@@ -314,4 +292,13 @@ display: table;
 	border-radius: 3px;
 	
 	margin-left: 5px;
+}
+
+
+
+.markdown_body {
+	font-size: 15px;
+	line-height: 1.7;
+	overflow: hidden;
+	word-wrap: break-word;
 }
