--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Login.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Login.html
@@ -3,14 +3,14 @@
 		<form data-dojo-attach-point="loginForm">
 			<div class="form_row">
 				<span class="add-on"><i class="icon-envelope"></i></span>
-				<input data-dojo-attach-point="login" name="login" type="text" placeholder="邮箱或用户名" maxlength="50">
+				<input data-dojo-attach-point="login" name="login" type="text" placeholder="" maxlength="50">
 			</div>
 			<div class="form_row">
 			 	<span class="add-on"><i class="icon-key"></i></span>
-				<input data-dojo-attach-point="password" name="password" type="password" placeholder="密码" maxlength="20">
+				<input data-dojo-attach-point="password" name="password" type="password" placeholder="" maxlength="20">
 			</div>
 		</form>
 	</div>
 	<ul data-dojo-attach-point="errorContainer" class="signup_form_errors"></ul>
-	<button class="signup_form_submit" data-dojo-attach-point="btnLogin">登录</button>
+	<button class="signup_form_submit" data-dojo-attach-point="btnLogin"></button>
 </div>
