--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/mixLogin/templates/Register.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/mixLogin/templates/Register.html
@@ -3,18 +3,18 @@
 		<form data-dojo-attach-point="signupForm">
 			<div class="form_row">
 				<span class="add-on"><i class="icon-envelope"></i></span>
-				<input data-dojo-attach-point="email" name="email" type="email" placeholder="邮箱" maxlength="50">
+				<input data-dojo-attach-point="email" name="email" type="email" placeholder="" maxlength="50">
 			</div>
 			<div class="form_row">
 				<span class="add-on"><i class="icon-key"></i></span>
-				<input data-dojo-attach-point="password" name="password" type="password" placeholder="密码" maxlength="20">
+				<input data-dojo-attach-point="password" name="password" type="password" placeholder="" maxlength="20">
 			</div>
 			<div class="form_row">
 				<span class="add-on"><i class="icon-user"></i></span>
-				<input data-dojo-attach-point="loginName" name="loginName" type="text" placeholder="用户名" maxlength="20">
+				<input data-dojo-attach-point="loginName" name="loginName" type="text" placeholder="" maxlength="20">
 			</div>
 		</form>
 	</div>
 	<ul data-dojo-attach-point="errorContainer" class="signup_form_errors"></ul>
-	<button class="signup_form_submit" data-dojo-attach-point="btnSignup">注册</button>
+	<button class="signup_form_submit" data-dojo-attach-point="btnSignup"></button>
 </div>
