--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
@@ -76,6 +76,11 @@ ul.tabs li a .counter {
 	margin-bottom: 6px;
 }
 
+.drip-error{
+	color: red;
+	margin-left: 6px;
+}
+
 .drip-exercise-option{
 	
 }
