--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ActivityNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/ActivityNode.html
@@ -6,7 +6,8 @@
 				<div class="activity_header_text">
 					<a href="#" data-dojo-attach-point="userInfo"></a>
 					<span data-dojo-attach-point="action"></span>
-					<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time"></time></span>
+					<span data-dojo-attach-point="exerciseTypeNode" class="exercise_type"></span>
+					<span class="time"><time title="" data-dojo-attach-point="time"></time></span>
 				</div>
 			</div>
 			<div class="activity_content" data-dojo-attach-point="activityContentNode">
